[package]
name = "prema"
version = "0.1.0"
edition = "2021"
description = "make markdown to html"
readme = "README.md"
repository = "https://github.com/rust-lang/cargo"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.23"
toml_edit = "0.22.24"