[package]
name = "prema"
version = "0.1.10"
edition = "2021"
description = "convert markdown to html"
readme = "README.md"
repository = "https://github.com/rubinsharks/pretty_mark"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markdown = "1.0.0-alpha.23"
toml_edit = "0.22.24"
tiny_http = "0.12"
structopt = "0.3.26"
chrono = "0.4.31"
maplit = "1.0.2"
regex = "1.10.2"